fix the presence of the bullet navigation on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -381,7 +381,7 @@ pre .string-value {
 }
 
 @media (max-width: 1200px) {
-    nav {
+    .nav-bullets {
         display: none;
     }
 }
